Add scripts for converting and linking to beeldbank addresses

--- a/phpScripts/composer.json
+++ b/phpScripts/composer.json
@@ -17,7 +17,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Leones\\Converter\\": "src"
+            "Leones\\Concordance\\": "src"
         }
     },
     "minimum-stability": "stable",
